[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.1", features = ["derive"] }
colored = "2.0.0"
jsonxf = "1.1.1"
mime = "0.3.17"
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1.28.2", features = ["full"] }
